# computer-vision

./: .gitattributes  .gitignore  AiTrainerProject.py  FaceDetectionBasics.py  FaceDetectionModule.py  FaceMeshBasics.py  FaceMeshModule.py  FingerCountingProject.py  HandTrackingMin.py  HandTrackingModule.py  HandTrackingProject.py  PoseEstimationMin.py  PoseModule.py  PoseProject.py  README.md  Sign-Language.py  VolumeHandControl.py  pyproject.toml  requirements.txt
MP_DATA/hello/0/: 0.npy  1.npy  10.npy  11.npy  12.npy  13.npy  14.npy  15.npy  16.npy  17.npy  18.npy  19.npy  2.npy  20.npy  21.npy  22.npy  23.npy  24.npy  25.npy  26.npy  27.npy  28.npy  29.npy  3.npy  4.npy  5.npy  6.npy  7.npy  8.npy  9.npy
MP_DATA/hello/1/: 0.npy  1.npy  10.npy  11.npy  12.npy  13.npy  14.npy  15.npy  16.npy  17.npy  18.npy  19.npy  2.npy  20.npy  21.npy  22.npy  23.npy  24.npy  25.npy  26.npy  27.npy  28.npy  29.npy  3.npy  4.npy  5.npy  6.npy  7.npy  8.npy  9.npy
MP_DATA/hello/10/: 0.npy  1.npy  10.npy  11.npy  12.npy  13.npy  14.npy  15.npy  16.npy  17.npy  18.npy  19.npy  2.npy  20.npy  21.npy  22.npy  23.npy  24.npy  25.npy  26.npy  27.npy  28.npy  29.npy  3.npy  4.npy  5.npy  6.npy  7.npy  8.npy  9.npy
MP_DATA/hello/11/: 0.npy  1.npy  10.npy  11.npy  12.npy  13.npy  14.npy  15.npy  16.npy  17.npy  18.npy  19.npy  2.npy  20.npy  21.npy  22.npy  23.npy  24.npy  25.npy  26.npy  27.npy  28.npy  29.npy  3.npy  4.npy  5.npy  6.npy  7.npy  8.npy  9.npy
MP_DATA/hello/12/: 0.npy  1.npy  10.npy  11.npy  12.npy  13.npy  14.npy  15.npy  16.npy  17.npy  18.npy  19.npy  2.npy  20.npy  (+16 more)
(+2550 files in other folders)
