[project]
name = "computer-vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "opencv-python<4.12.0.0",
    "numpy<2",
    "scikit-learn>=1.8.0",
    "tensorflow==2.15.0",
    "mediapipe==0.10.14",
]
